--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <div>/random</div>
       <div>/rating/9</div>
       <div>/genre/Comedy</div>
+      <div>/feedback</div>
     </div>
   </body>
 </html>
